Update tests for predicate